--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -24,11 +24,9 @@
 		"iosLink": "https://www.apple.com/ios"
 	}, {
 		"logo": "https://image.freepik.com/free-icon/apple-logo_318-40184.jpg",
-		"name": "Apple3",
-		"androidLink": "https://www.apple.com/android3",
-		"macpcLink": "https://www.apple.com/mac3",
-		"winpcLink": "https://www.apple.com/pc3",
-		"iosLink": "https://www.apple.com/ios3",
-		"defaultLink": "https://www.apple.com/3"
+		"name": "Dropbox",
+		"macpcLink": "https://www.dropbox.com/install",
+		"defaultLink": "https://www.dropbox.com/"
 	}]
 }
+
