update dropbox logo

--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -23,7 +23,7 @@
 		"winpcLink": "https://www.apple.com/pc",
 		"iosLink": "https://www.apple.com/ios"
 	}, {
-		"logo": "https://image.freepik.com/free-icon/apple-logo_318-40184.jpg",
+		"logo": "https://cfl.dropboxstatic.com/static/images/brand/glyph-vflK-Wlfk.png",
 		"name": "Dropbox",
 		"macpcLink": "https://www.dropbox.com/install",
 		"defaultLink": "https://www.dropbox.com/"
