--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -20,7 +20,7 @@
 		"iosLink": "https://www.apple.com/ios"
 	}, {
 		"logo": "https://cfl.dropboxstatic.com/static/images/brand/glyph-vflK-Wlfk.png",
-		"name": "Dropbox 2",
+		"name": "Dropbox new name",
 		"macpcLink": "https://www.dropbox.com/install",
 		"defaultLink": "https://www.dropbox.com/"
 	}]
