--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -1,4 +1,5 @@
 {
+	"enabled": false,
 	"suggestedApps": [{
 		"logo": "https://image.freepik.com/free-icon/apple-logo_318-40184.jpg",
 		"name": "Apple",
