better test data

--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -21,7 +21,7 @@
 		"iosLink": "https://www.apple.com/ios"
 	}, {
 		"logo": "https://cfl.dropboxstatic.com/static/images/brand/glyph-vflK-Wlfk.png",
-		"name": "Dropbox new name fsdfsdf",
+		"name": "Dropbox",
 		"macpcLink": "https://www.dropbox.com/install",
 		"defaultLink": "https://www.dropbox.com/"
 	}]
