--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -30,7 +30,16 @@
 		"name": "flickr",
 		"iosLink": "https://itunes.apple.com/us/app/flickr/id328407587",
 		"defaultLink": "https://www.flickr.com/"
-	}		 
+	},	{
+		"logo": "http://agile.saucenet.io/images/agile_512.png",
+		"name": "Agile Tasks",
+		"defaultLink": "http://agile.saucenet.io/#/"
+	},
+	{
+		"logo": "http://agile.saucenet.io/images/agile_512.png",
+		"name": "Agile Tasks",
+		"defaultLink": "http://agile.saucenet.io/#/"
+	},
 	]
 }
 
