--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -1,21 +1,14 @@
 {
 	"enabled": true,
 	"suggestedApps": [{
-		"logo": "https://image.freepik.com/free-icon/apple-logo_318-40184.jpg",
-		"name": "Apple",
+		"logo": "https://developer.apple.com/softwarelicensing/images/swl_itunes.png",
+		"name": "iTunes",
 		"defaultLink": "https://www.apple.com"
 	}, {
-		"logo": "http://agile.saucenet.io/images/agile_512.png",
+		"logo": "http://agile.saucenet.io/images/agile_96.png",
 		"name": "Agile Tasks",
 		"androidLink": "https://play.google.com/store/apps/details?id=com.sauce.agile&hl=en",		
 		"defaultLink": "http://agile.saucenet.io/#/"
-	}, {
-		"logo": "https://image.freepik.com/free-icon/apple-logo_318-40184.jpg",
-		"name": "error app should get removed",
-		"androidLink": "https://www.apple.com/android",
-		"macpcLink": "https://www.apple.com/mac",
-		"winpcLink": "https://www.apple.com/pc",
-		"iosLink": "https://www.apple.com/ios"
 	}, {
 		"logo": "https://cfl.dropboxstatic.com/static/images/brand/glyph-vflK-Wlfk.png",
 		"name": "Dropbox",
@@ -27,10 +20,6 @@
 		"name": "flickr",
 		"iosLink": "https://itunes.apple.com/us/app/flickr/id328407587",
 		"defaultLink": "https://www.flickr.com/"
-	},	{
-		"logo": "http://agile.saucenet.io/images/agile_512.png",
-		"name": "Agile Tasks",
-		"defaultLink": "http://agile.saucenet.io/#/"
 	}
 	]
 }
