--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -1,7 +1,7 @@
 {
 	"enabled": true,
 	"suggestedApps": [{
-		"logo": "https://developer.apple.com/softwarelicensing/images/swl_itunes.png",
+		"logo": "http://imgur.com/z2kl6eM",
 		"name": "iTunes",
 		"defaultLink": "https://www.apple.com"
 	}, {
