--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -1,7 +1,7 @@
 {
 	"enabled": true,
 	"suggestedApps": [{
-		"logo": "http://imgur.com/z2kl6eM",
+		"logo": "http://i.imgur.com/TWy75sC.png",
 		"name": "iTunes",
 		"defaultLink": "https://www.apple.com"
 	}, {
