--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -1,5 +1,5 @@
 {
-	"enabled": true,
+	"enabled": false,
 	"suggestedApps": [{
 		"logo": "http://i.imgur.com/Vcc3ZNw.png",
 		"name": "Family Wall",
