--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -2,7 +2,7 @@
 	"enabled": true,
 	"suggestedApps": [{
 		"logo": "http://i.imgur.com/mNJqx6A.png",
-		"name": "Lobster Content Marketplace",
+		"name": "Lobster Photo Marketplace",
 		"defaultLink": "https://lobster.media/sell-content/"
 	}, {
 		"logo": "http://i.imgur.com/Vcc3ZNw.png",
