--- a/stage-suggested-apps.json
+++ b/stage-suggested-apps.json
@@ -1,7 +1,7 @@
 {
 	"enabled": true,
 	"suggestedApps": [{
-		"logo": "http://i.imgur.com/4FeqTYX.png",
+		"logo": "http://i.imgur.com/3hm7Bwz.jpg",
 		"name": "Nixplay Photo Frames",
 		"defaultLink": "http://shop.nixplay.com/"
 	}, {
