--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -2,7 +2,7 @@
 	"enabled": true,
 	"suggestedApps": [{
 		"logo": "http://i.imgur.com/3hm7Bwz.jpg",
-		"name": "Nixplay Photo Frames",
+		"name": "Nixplay Frames",
 		"defaultLink": "http://shop.nixplay.com/",
 		"description": "Digital picture frames to display your favorite memories in stunning clarity"
 	}, {
