--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -1,5 +1,5 @@
 {
-	"enabled": true,
+	"enabled": false,
 	"suggestedApps": [{
 		"logo": "http://i.imgur.com/3hm7Bwz.jpg",
 		"name": "Nixplay Frames",
