--- a/suggested-apps.json
+++ b/suggested-apps.json
@@ -1,30 +1,30 @@
 {
 	"enabled": true,
 	"suggestedApps": [{
-		"logo": "http://i.imgur.com/3hm7Bwz.jpg",
+		"logo": "https://i.imgur.com/3hm7Bwz.jpg",
 		"name": "Nixplay Frames",
 		"defaultLink": "http://shop.nixplay.com/",
 		"description": "Digital picture frames to display your favorite memories in stunning clarity"
 	}, {
-		"logo": "http://i.imgur.com/4FeqTYX.png",
+		"logo": "https://i.imgur.com/4FeqTYX.png",
 		"name": "FreePrints",
 		"androidLink": "https://play.google.com/store/apps/details?id=com.photoaffections.freeprints",
 		"defaultLink": "https://www.photoaffections.com/freeprints",
 		"description": "Bring your photos to life and receive up to 1000 free prints per year"
 	}, {
-		"logo": "http://i.imgur.com/mNJqx6A.png",
+		"logo": "https://i.imgur.com/mNJqx6A.png",
 		"name": "Lobster Photo Marketplace",
 		"defaultLink": "https://lobster.media/sell-content/",
 		"description": "Earn rewards by sharing your favorite photos stored in the cloud"
 	}, {
-		"logo": "http://i.imgur.com/z2kl6eM.png",
+		"logo": "https://i.imgur.com/z2kl6eM.png",
 		"name": "IFTTT",
 		"androidLink": "https://play.google.com/store/apps/details?id=com.ifttt.ifttt",
 		"iosLink": "https://itunes.apple.com/us/app/ifttt/id660944635?mt=8",
 		"defaultLink": "https://ifttt.com/verizon_cloud",		
 		"description": "Get the most out of the cloud by connecting it with your favorite apps and services"
 	}, {
-		"logo": "http://i.imgur.com/Vcc3ZNw.png",
+		"logo": "https://i.imgur.com/Vcc3ZNw.png",
 		"name": "Family Wall",
 		"androidLink": "https://play.google.com/store/apps/details?id=com.familywall",
 		"iosLink": "https://itunes.apple.com/us/app/familywall-private-family/id496889629?mt=8",
